# Helper-CPP-Template-Repo

cpp-template-repo/: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp
cpp-template-repo/.circleci/: config.yml
cpp-template-repo/docs/: .circleci
cpp-template-repo/include/: Calculator.h  Logger.h  Notifier.h
cpp-template-repo/src/: Calculator.cpp  Logger.cpp  Notifier.cpp  main.cpp
cpp-template-repo/tests/: CalculatorTest.cpp  LoggerTest.cpp  NotifierTest.cpp
